; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_video_encoder_get_levels.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_video_encoder_get_levels.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hb_h264_level_names = common dso_local global i8** null, align 8
@hb_h265_level_names = common dso_local global i8** null, align 8
@HB_VCODEC_QSV_MASK = common dso_local global i32 0, align 4
@hb_vce_h264_level_names = common dso_local global i8** null, align 8
@hb_vt_h265_level_names = common dso_local global i8** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8** @hb_video_encoder_get_levels(i32 %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %9 [
    i32 132, label %5
    i32 133, label %5
    i32 139, label %5
    i32 135, label %5
    i32 128, label %7
    i32 131, label %7
    i32 130, label %7
    i32 129, label %7
    i32 138, label %7
    i32 136, label %7
  ]

5:                                                ; preds = %1, %1, %1, %1
  %6 = load i8**, i8*** @hb_h264_level_names, align 8
  store i8** %6, i8*** %2, align 8
  br label %10

7:                                                ; preds = %1, %1, %1, %1, %1, %1
  %8 = load i8**, i8*** @hb_h265_level_names, align 8
  store i8** %8, i8*** %2, align 8
  br label %10

9:                                                ; preds = %1
  store i8** null, i8*** %2, align 8
  br label %10

10:                                               ; preds = %9, %7, %5
  %11 = load i8**, i8*** %2, align 8
  ret i8** %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
